entity model and services added

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/HomePage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/HomePage.html
@@ -53,7 +53,7 @@
 				<li>profit!</li>
 			</ol>
 			<p>
-				Please mention the correct Wicket version: <wicket:container wicket:id="version">1.5-SNAPSHOT</wicket:container>.
+				Please mention the correct Wicket version: <strong><wicket:container wicket:id="version">1.5-SNAPSHOT</wicket:container></strong>.
 			</p>
 		</div>
 		<div id="ft">
