--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/BaseWebPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/BaseWebPage.html
@@ -7,32 +7,10 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Kategorien</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Artikel</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Tische</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div wicket:id="header"></div>
 <main class="container">
     <wicket:child></wicket:child>
 </main>
+<div wicket:id="footer"></div>
 </body>
 </html>
