new pages for articles, categories and tables, links between them

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
@@ -14,16 +14,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+                    <a wicket:id="dashboard" class="nav-link">Dashboard <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kategorien</a>
+                    <a wicket:id="categories" class="nav-link">Kategorien</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Artikel</a>
+                    <a wicket:id="articles" class="nav-link">Artikel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tische</a>
+                    <a wicket:id="tables" class="nav-link">Tische</a>
                 </li>
             </ul>
         </div>
