added logo with ContextRelativeResourceReference and Image

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/BaseWebPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/BaseWebPage.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Apache Wicket Quickstart</title>
     <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="sg-default.css">
 </head>
 <body>
 <div wicket:id="header"></div>
