--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
@@ -4,8 +4,10 @@
 </head>
 <body>
 <wicket:panel>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Logo</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+            <img wicket:id="brand">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
