--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
@@ -15,7 +15,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a wicket:id="dashboard" class="nav-link">Dashboard <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
