--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <wicket:panel>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav wicket:id="navbar" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">
             <img wicket:id="brand">
         </a>
