display categories using RepeatingView Component

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
@@ -4,7 +4,10 @@
 </head>
 <body>
 <wicket:extend>
-    TODO Kategorien
+    <h1>Kategorien</h1>
+    <ul>
+        <li wicket:id="categories"></li>
+    </ul>
 </wicket:extend>
 </body>
 </html>
