custom navigation with bootstrap style

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
@@ -17,7 +17,13 @@
             </td>
         </tr>
     </table>
-    <div wicket:id="navigator"></div>
+    <ul class="pagination">
+        <li wicket:id="navigator" class="page-item">
+            <a wicket:id="pageLink" href="#" class="page-link">
+                <span wicket:id="pageNumber"></span>
+            </a>
+        </li>
+    </ul>
 </wicket:extend>
 </body>
 </html>
