--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/TablesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/TablesPage.html
@@ -4,7 +4,23 @@
 </head>
 <body>
 <wicket:extend>
-    TODO Tische
+    <div class="row">
+        <div class="col-12">
+            <h1>Tische</h1>
+            <table class="table">
+                <tr>
+                    <th>Name</th>
+                    <th>Anzahl Sitzplätze</th>
+                    <th>Elektronisch bestellbar</th>
+                </tr>
+                <tr wicket:id="tables">
+                    <td wicket:id="name"></td>
+                    <td wicket:id="seatCount"></td>
+                    <td wicket:id="orderableElectronically"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </wicket:extend>
 </body>
 </html>
