added simple sorting by name to categorylist

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
@@ -9,7 +9,9 @@
             <h1>Kategorien</h1>
             <table class="table">
                 <tr>
-                    <th>Name</th>
+                    <th>
+                        <span wicket:id="orderByName">Name</span>
+                    </th>
                     <th>Bild</th>
                 </tr>
                 <tr wicket:id="categories">
