switched model of categories, tables and articles to CompoundPropertyModel

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/ArticlesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/ArticlesPage.html
@@ -19,7 +19,7 @@
                 </tr>
                 <tr wicket:id="articles">
                     <td wicket:id="name"></td>
-                    <td wicket:id="category"></td>
+                    <td wicket:id="category.name"></td>
                     <td wicket:id="description"></td>
                     <td wicket:id="price"></td>
                     <td>
