first form in categories list to add ne category / paging panel introduced to open navigator to ne placed elsewhere

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/TablesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/TablesPage.html
@@ -21,6 +21,11 @@
             </table>
         </div>
     </div>
+    <div class="" row>
+        <div class="col-12">
+            <div wicket:id="navigator"></div>
+        </div>
+    </div>
 </wicket:extend>
 </body>
 </html>
