--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/ArticlesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/ArticlesPage.html
@@ -31,6 +31,11 @@
             </table>
         </div>
     </div>
+    <div class="" row>
+        <div class="col-12">
+            <div wicket:id="navigator"></div>
+        </div>
+    </div>
 </wicket:extend>
 </body>
 </html>
