added validators and feedback to category form

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
@@ -33,6 +33,7 @@
             <button wicket:id="newCategory" class="btn">Neue Kategorie anlegen</button>
         </div>
     </div>
+    <div wicket:id="feedback"></div>
     <form wicket:id="form">
         <div class="form-group row">
             <label class="col-3 col-form-label">Name</label>
