added article adding form with RangeValidators

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/CategoriesPage.html
@@ -28,7 +28,7 @@
             <div wicket:id="navigator"></div>
         </div>
     </div>
-    <div class="row button">
+    <div class="row">
         <div class="col-12">
             <button wicket:id="newCategory" class="btn">Neue Kategorie anlegen</button>
         </div>
