--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/TablesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/TablesPage.html
@@ -28,31 +28,11 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <button wicket:id="newTable" class="btn">Neuen Tisch anlegen</button>
+            <wicket:link>
+                <a href="CreateTablePage.html" class="btn">Neuen Tisch anlegen</a>
+            </wicket:link>
         </div>
     </div>
-    <div wicket:id="validationFeedback"></div>
-    <div wicket:id="successFeedback"></div>
-    <form wicket:id="form">
-        <div class="form-group row">
-            <label class="col-3 col-form-label">Name</label>
-            <input type="text" class="col-9 form-control" wicket:id="name">
-        </div>
-        <div class="form-group row">
-            <label class="col-3 col-form-label">Anzahl Sitzplätze</label>
-            <div class="col-9" wicket:id="seatCount">
-                <div class="form-check" wicket:id="choices">
-                    <input class="form-check-input" type="radio" value="" wicket:id="seatCountValue">
-                    <label class="form-check-label" wicket:id="seatCountLabel"></label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-3 col-form-label">Elektronisch bestellbar?</label>
-            <input type="checkbox" class="col-9 form-control" wicket:id="orderableElectronically"></input>
-        </div>
-        <input type="submit" value="Speichern" class="btn btn-primary">
-    </form>
 </wicket:extend>
 </body>
 </html>
