separated entities-forms in separate panels

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/TablesPage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/TablesPage.html
@@ -12,11 +12,15 @@
                     <th>Name</th>
                     <th>Anzahl Sitzplätze</th>
                     <th>Elektronisch bestellbar</th>
+                    <th></th>
                 </tr>
                 <tr wicket:id="tables">
                     <td wicket:id="name"></td>
                     <td wicket:id="seatCount"></td>
                     <td wicket:id="orderableElectronically"></td>
+                    <td>
+                        <a wicket:id="modifyTable"><i class="fas fa-eye"></i></a>
+                    </td>
                 </tr>
             </table>
         </div>
