--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/EditTable.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/EditTable.html
@@ -21,7 +21,8 @@
         </div>
         <div class="form-group row">
             <label class="col-3 col-form-label">Elektronisch bestellbar?</label>
-            <input type="checkbox" class="col-9 form-control" wicket:id="orderableElectronically"></input>
+            <input type="checkbox" class="col-5 form-control" wicket:id="orderableElectronically"></input>
+            <object wicket:id="qrCode" class="col-4" height="300px"></object>
         </div>
         <input type="submit" value="Speichern" class="btn btn-primary">
     </form>
