introduced tree to homepage (which now serves as dashboard) with sales for articles

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/HomePage.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/HomePage.html
@@ -5,6 +5,15 @@
 <body>
 <wicket:extend>
     <h2>Willkommen zu Smart Gastronomy</h2>
+
+    <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">Umsätze pro Artikel</h3>
+            <p class="card-text">Sehen Sie hier Ihre Umsätze über alle Kategorien und Artikel.</p>
+            <div wicket:id="dashboardTree"></div>
+        </div>
+    </div>
+
 </wicket:extend>
 </body>
 </html>
