added electronic menu with panels for categories and articles

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/orders/Menu.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/orders/Menu.html
@@ -12,6 +12,9 @@
         Es tut uns leid, aber an diesem Tisch sind leider keine elektronischen Bestellungen möglich. Bitte rufen Sie den Kellner.
         </span>
     </div>
+    <div wicket:id="categories">
+        <div wicket:id="categoryPanel"></div>
+    </div>
 </main>
 </body>
 </html>
