--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/login/Login.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/login/Login.html
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:wicket="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
 <body>
-
+<div id="login-form-body">
+    <form wicket:id="form" class="container login-form">
+        <div class="form-group row">
+            <label wicket:for="username" class="col-sm-2 col-form-label">Username</label>
+            <div class="col-sm-10">
+                <input wicket:id="username" type="text" class="form-control" placeholder="Username">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label wicket:for="password" class="col-sm-2 col-form-label">Passwort</label>
+            <div class="col-sm-10">
+                <input wicket:id="password" type="password" class="form-control" placeholder="Passwort">
+            </div>
+        </div>
+        <button wicket:id="login" type="submit" class="btn btn-primary">Login</button>
+    </form>
+</div>
 </body>
 </html>
