stored user logged in in own session class

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/Header.html
@@ -28,6 +28,11 @@
                     <a wicket:id="tables" class="nav-link">Tische</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <span wicket:id="username" class="navbar-text">USername</span>
+                </li>
+            </ul>
         </div>
     </nav>
 </wicket:panel>
