Deletion of tables

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/EditTable.html
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/tables/EditTable.html
@@ -24,6 +24,7 @@
             <input type="checkbox" class="col-9 form-control" wicket:id="orderableElectronically"></input>
         </div>
         <input type="submit" value="Speichern" class="btn btn-primary">
+        <a wicket:id="deleteTable" href="#" class="btn">Löschen</a>
     </form>
 </wicket:panel>
 </body>
